fixed image stretching on testimonial circled images, plus minor text tweaks (1 more final commit/push might be needed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,8 +246,8 @@ footer{
 }
 #testimonials img {
     border: 6px solid var(--secondary-color);
-    width: 25%;
-    height: 25%;
+    width: 120px;
+    height: 120px;
     margin: 18px auto;
     object-fit: cover;
 }
@@ -363,7 +363,7 @@ footer{
     background-color: white;
 }
 #coaches .card {
-    border: none !important;
+    border: none;
 }
 
 #coaches img {
@@ -426,6 +426,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 /* for Firefox */
+/* also copied */
 input[type="number"] {
     -moz-appearance: textfield;
 }
@@ -518,8 +519,8 @@ input[type="number"] {
         margin-top: 2rem;
     }
     #testimonials img {
-        width: 30%;
-        height: 30%;
+        width: 150px;
+        height: 150px;
         margin: 15px auto;
         object-fit: cover;
     }
